[gd_scene load_steps=2 format=3 uid="uid://bjsd5laf1ijd7"]

[ext_resource type="Script" path="res://addons/godolibur/SceneHandling/PlayerInteraction/InventoryLink/InventoryLink.gd" id="1"]

[node name="InventoryLink" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)

[connection signal="body_entered" from="." to="." method="player_entered_area"]
[connection signal="body_exited" from="." to="." method="player_exited_area"]
